Created drumMachine and music objects

--- a/index.html
+++ b/index.html
@@ -10,55 +10,55 @@
   <h1 id="title">Loading...</h1>
   <p id="title2">Should be ready in less than 15 seconds.</p>
   <br>
-  <button onclick="startPlayback();" id="playButton" class="btn-stereo">
+  <button id="playButton" class="btn-stereo">
     <img src="images/PlayButton190Fix.gif"/>
   </button>
   &nbsp;
   &nbsp;  
-  <button onclick="pausePlayback();" id="pauseButton" class="btn-stereo">
+  <button id="pauseButton" class="btn-stereo">
     <img src="images/PauseButton190.gif"/>
   </button>
   &nbsp;
   &nbsp;
-  <button onclick="stopPlayback();" id="stopButton" class="btn-stereo">
+  <button id="stopButton" class="btn-stereo">
     <img src="images/StopButton190.gif"/>
   </button>
   <br><br><br>
   <div style="margin-bottom:24px">
-	<button id="k0"  class="btn-small" onclick="toggleKick(this.id)"></button>
-	<button id="k1"  class="btn-small" onclick="toggleKick(this.id)"></button>
-	<button id="k2"  class="btn-small" onclick="toggleKick(this.id)"></button>
-	<button id="k3"  class="btn-small" onclick="toggleKick(this.id)"></button>
-	<button id="k4"  class="btn-small" onclick="toggleKick(this.id)"></button>
-	<button id="k5"  class="btn-small" onclick="toggleKick(this.id)"></button>
-	<button id="k6"  class="btn-small" onclick="toggleKick(this.id)"></button>
-	<button id="k7"  class="btn-small" onclick="toggleKick(this.id)"></button>
-	<button id="k8"  class="btn-small" onclick="toggleKick(this.id)"></button>
-	<button id="k9"  class="btn-small" onclick="toggleKick(this.id)"></button>
-	<button id="k10" class="btn-small" onclick="toggleKick(this.id)"></button>
-	<button id="k11" class="btn-small" onclick="toggleKick(this.id)"></button>
-	<button id="k12" class="btn-small" onclick="toggleKick(this.id)"></button>
-	<button id="k13" class="btn-small" onclick="toggleKick(this.id)"></button>
-	<button id="k14" class="btn-small" onclick="toggleKick(this.id)"></button>
-	<button id="k15" class="btn-small" onclick="toggleKick(this.id)"></button>
+	<button id="k0"  class="btn-small" onclick="drumMachine.toggleKick(this.id)"></button>
+	<button id="k1"  class="btn-small" onclick="drumMachine.toggleKick(this.id)"></button>
+	<button id="k2"  class="btn-small" onclick="drumMachine.toggleKick(this.id)"></button>
+	<button id="k3"  class="btn-small" onclick="drumMachine.toggleKick(this.id)"></button>
+	<button id="k4"  class="btn-small" onclick="drumMachine.toggleKick(this.id)"></button>
+	<button id="k5"  class="btn-small" onclick="drumMachine.toggleKick(this.id)"></button>
+	<button id="k6"  class="btn-small" onclick="drumMachine.toggleKick(this.id)"></button>
+	<button id="k7"  class="btn-small" onclick="drumMachine.toggleKick(this.id)"></button>
+	<button id="k8"  class="btn-small" onclick="drumMachine.toggleKick(this.id)"></button>
+	<button id="k9"  class="btn-small" onclick="drumMachine.toggleKick(this.id)"></button>
+	<button id="k10" class="btn-small" onclick="drumMachine.toggleKick(this.id)"></button>
+	<button id="k11" class="btn-small" onclick="drumMachine.toggleKick(this.id)"></button>
+	<button id="k12" class="btn-small" onclick="drumMachine.toggleKick(this.id)"></button>
+	<button id="k13" class="btn-small" onclick="drumMachine.toggleKick(this.id)"></button>
+	<button id="k14" class="btn-small" onclick="drumMachine.toggleKick(this.id)"></button>
+	<button id="k15" class="btn-small" onclick="drumMachine.toggleKick(this.id)"></button>
   </div>
   <div>
-	<button id="s0"  class="btn-small" onclick="toggleSnare(this.id)"></button>
-	<button id="s1"  class="btn-small" onclick="toggleSnare(this.id)"></button>
-	<button id="s2"  class="btn-small" onclick="toggleSnare(this.id)"></button>
-	<button id="s3"  class="btn-small" onclick="toggleSnare(this.id)"></button>
-	<button id="s4"  class="btn-small" onclick="toggleSnare(this.id)"></button>
-	<button id="s5"  class="btn-small" onclick="toggleSnare(this.id)"></button>
-	<button id="s6"  class="btn-small" onclick="toggleSnare(this.id)"></button>
-	<button id="s7"  class="btn-small" onclick="toggleSnare(this.id)"></button>
-	<button id="s8"  class="btn-small" onclick="toggleSnare(this.id)"></button>
-	<button id="s9"  class="btn-small" onclick="toggleSnare(this.id)"></button>
-	<button id="s10" class="btn-small" onclick="toggleSnare(this.id)"></button>
-	<button id="s11" class="btn-small" onclick="toggleSnare(this.id)"></button>
-	<button id="s12" class="btn-small" onclick="toggleSnare(this.id)"></button>
-	<button id="s13" class="btn-small" onclick="toggleSnare(this.id)"></button>
-	<button id="s14" class="btn-small" onclick="toggleSnare(this.id)"></button>
-	<button id="s15" class="btn-small" onclick="toggleSnare(this.id)"></button>
+	<button id="s0"  class="btn-small" onclick="drumMachine.toggleSnare(this.id)"></button>
+	<button id="s1"  class="btn-small" onclick="drumMachine.toggleSnare(this.id)"></button>
+	<button id="s2"  class="btn-small" onclick="drumMachine.toggleSnare(this.id)"></button>
+	<button id="s3"  class="btn-small" onclick="drumMachine.toggleSnare(this.id)"></button>
+	<button id="s4"  class="btn-small" onclick="drumMachine.toggleSnare(this.id)"></button>
+	<button id="s5"  class="btn-small" onclick="drumMachine.toggleSnare(this.id)"></button>
+	<button id="s6"  class="btn-small" onclick="drumMachine.toggleSnare(this.id)"></button>
+	<button id="s7"  class="btn-small" onclick="drumMachine.toggleSnare(this.id)"></button>
+	<button id="s8"  class="btn-small" onclick="drumMachine.toggleSnare(this.id)"></button>
+	<button id="s9"  class="btn-small" onclick="drumMachine.toggleSnare(this.id)"></button>
+	<button id="s10" class="btn-small" onclick="drumMachine.toggleSnare(this.id)"></button>
+	<button id="s11" class="btn-small" onclick="drumMachine.toggleSnare(this.id)"></button>
+	<button id="s12" class="btn-small" onclick="drumMachine.toggleSnare(this.id)"></button>
+	<button id="s13" class="btn-small" onclick="drumMachine.toggleSnare(this.id)"></button>
+	<button id="s14" class="btn-small" onclick="drumMachine.toggleSnare(this.id)"></button>
+	<button id="s15" class="btn-small" onclick="drumMachine.toggleSnare(this.id)"></button>
   </div>
   <pre><script src="seatdriver.js"></script></pre>
 </body>
