Monkey patch and clean-up

--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
     <button id="s14" class="btn-small" onclick="drumMachine.toggleSnare(this.id)"></button>
     <button id="s15" class="btn-small" onclick="drumMachine.toggleSnare(this.id)"></button>
   </div>
-  <pre><script src="seatdriver.js"></script></pre>
+	<script src="AudioContextMonkeyPatch.js"></script>
+  <script src="seatdriver.js"></script>
 </body>
 </html>
